# ChangeLog for dev-lang/snobol
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/snobol/ChangeLog,v 1.8 2006/01/22 17:20:44 caleb Exp $

  22 Jan 2006; Caleb Tennis <caleb@gentoo.org> -snobol-1.0.ebuild:
  Removing p.masked version

  14 Jan 2006; Fabian Groffen <grobian@gentoo.org> snobol-1.1.ebuild:
  Marked ~ppc-macos (bug #11606)

*snobol-1.1 (12 Dec 2005)

  12 Dec 2005; Robin H. Johnson <robbat2@gentoo.org> +snobol-1.1.ebuild:
  Version bump.

*snobol-1.0 (19 Jul 2004)

  19 Jul 2004; Robin H. Johnson <robbat2@gentoo.org> metadata.xml,
  snobol-1.0.ebuild:
  add metadata.xml, new version.

  13 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> snobol-0.99.4.ebuild,
  snobol-0.99.44.ebuild:
  Don't assign default to S; header fix

*snobol-0.99.44 (22 Dec 2003)

  22 Dec 2003; Robin H. Johnson <robbat2@gentoo.org> snobol-0.99.44.ebuild:
  add in the beta version, which is recommended upstream

*snobol-0.99.4 (22 Dec 2003)

  22 Dec 2003; Robin H. Johnson <robbat2@gentoo.org> snobol-0.99.4.ebuild:
  initial commit, ebuild by robbat2@gentoo.org, inspired by cleaning my room and
  finding a manual for this damn thing, circa 1968.
