@@ -1,8 +1,24 @@
-MD5 b26ef509a11fb4f5d6c5bf4212972b82 ChangeLog 1215
+MD5 afb796944ce45528e5ad9e357bbbb34c ChangeLog 1445
+RMD160 52b5e0855b0349467761f7dcba061aa817ad6f53 ChangeLog 1445
+SHA256 b3611a0da6fe29c15b3f1704a10dcce878037aa4745898a2aba60baba0229d0c ChangeLog 1445
 MD5 fc15c8513d6f9fe07d1b57df53333938 files/digest-snobol-0.99.4 65
+RMD160 0938f9e8fb466f8e534db64a85ee556f8c4813e8 files/digest-snobol-0.99.4 65
+SHA256 100689605c1c84ad8eee9e0921246c93ea0f5585259c28d82647c215703010cc files/digest-snobol-0.99.4 65
 MD5 3ec06c6673caf4c21bcacdd0453a337b files/digest-snobol-0.99.44 67
+RMD160 3431c3ec988262f1e82d6ac0553ea66979e682ad files/digest-snobol-0.99.44 67
+SHA256 0e192c5a795ea7a0aed9cf58ddbba2bdc1853a0698e92ed5994818a9bb6489a2 files/digest-snobol-0.99.44 67
 MD5 97b0ca5d43c4fac8f35b94858a13f015 files/digest-snobol-1.1 63
+RMD160 1bfbf1bed052166123fffad111bbd55f8d34f710 files/digest-snobol-1.1 63
+SHA256 7df483dacbcf9bc044e06342478674eb31d184b90ea3e20cfadbe9ea0e09dff4 files/digest-snobol-1.1 63
 MD5 b0d485ea1a51fb83c70daedef2599272 metadata.xml 279
-MD5 b92f8b532b19634e997e49f6fbeb8353 snobol-0.99.4.ebuild 1222
-MD5 480d0c1dde54d56e407dc3b49f9d6f4f snobol-0.99.44.ebuild 1433
-MD5 785b88f011f20e5004f0090a4c3c8936 snobol-1.1.ebuild 1559
+RMD160 f84566b5a463b59cc5ddd8a2210a54de9492ed2f metadata.xml 279
+SHA256 785db7b7f8e4f9a526dc574ce2aa10024cc83af170f38ec9af9f56c23fc15543 metadata.xml 279
+MD5 d5c07bfec79e4d90b83cf0d32191f3ae snobol-0.99.4.ebuild 1213
+RMD160 554a1ebfb0b801a7ac4fd936e10421ea2db3971d snobol-0.99.4.ebuild 1213
+SHA256 c9fcbb4d86de14dc5673308a07eec7a35475d343fdb1596a91ce64e6ff59b390 snobol-0.99.4.ebuild 1213
+MD5 79d0857ae6b254da09e9ed51da34af51 snobol-0.99.44.ebuild 1424
+RMD160 b5093240408010ac57692c356affe363aa47e05f snobol-0.99.44.ebuild 1424
+SHA256 e2b22a9fd8046bc3903c9d1290dba540c828bbf4be72fa75f225f856cb5ba4dc snobol-0.99.44.ebuild 1424
+MD5 6eeae837ffd3ae6c44a81838ec7f6df5 snobol-1.1.ebuild 1551
+RMD160 105522c82d840122a5df0aeec51357475208b3e7 snobol-1.1.ebuild 1551
+SHA256 acb1a6fd66a14b76b2babc3a683d97d667f2a8153dd024fb88fd45777b2584da snobol-1.1.ebuild 1551
