@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/snobol/snobol-0.99.44.ebuild,v 1.3 2004/06/24 22:56:25 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/snobol/snobol-0.99.44.ebuild,v 1.4 2006/02/15 06:59:39 robbat2 Exp $
 
 DESCRIPTION="Phil Budne's port of Macro SNOBOL4 in C, for modern machines"
 HOMEPAGE="http://www.snobol4.org/csnobol4/"
@@ -8,7 +8,7 @@ HOMEPAGE="http://www.snobol4.org/csnobol4/"
 MY_PN="snobol4"
 MY_P="${MY_PN}-${PV}"
 SRC_URI="ftp://ftp.snobol4.org/snobol4/beta/${MY_P}.tar.gz"
-LICENSE="public-domain"
+LICENSE="as-is"
 SLOT="0"
 KEYWORDS="~x86"
 IUSE=""
