@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/snobol
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/snobol/ChangeLog,v 1.8 2006/01/22 17:20:44 caleb Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/snobol/ChangeLog,v 1.9 2006/02/15 06:59:39 robbat2 Exp $
+
+  15 Feb 2006; Robin H. Johnson <robbat2@gentoo.org> snobol-0.99.4.ebuild,
+  snobol-0.99.44.ebuild, snobol-1.1.ebuild:
+  Bug #115536, correct license for snobol. Text has the same meaning as Gentoo
+  boilerplate as-is license.
 
   22 Jan 2006; Caleb Tennis <caleb@gentoo.org> -snobol-1.0.ebuild:
   Removing p.masked version
